Closed Bug 1689799 Opened 5 years ago Closed 5 years ago

SVG textPath elements moved on top of each other if they do not have a line break

Categories

(Core :: SVG, defect)

Firefox 85
defect

Tracking

()

RESOLVED FIXED
87 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox84 --- unaffected
firefox85 --- wontfix
firefox86 --- fixed
firefox87 --- fixed

People

(Reporter: mail, Assigned: longsonr)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:85.0) Gecko/20100101 Firefox/85.0

Steps to reproduce:

I have created an SVG using D3.js library. If an SVG element contains a <text> element with several <textPath> elements and these are transmitted, e.g. packed by compression, the elements are displayed on top of each other. If a line break is inserted after each <textPath> element, the display is correct again.

Please compare the provided fiddles. They contain exactly the same SVG code only differs in the formatting of the <text> block. If not linebreaks provided the SVG is not rendered correctly.

Actual results:

Firefox 85 breaks the rendering of the SVG. It was working until version 84.

See the following fiddle with the actual result:
https://jsfiddle.net/fvnbtzxw/

Expected results:

The <textPath> elements should behave as before in Firefox 84.

See the following fiddle with the expected result: https://jsfiddle.net/c25em60q/

Component: Untriaged → SVG
OS: Unspecified → All
Product: Firefox → Core
Hardware: Unspecified → All

This error was not happening in Firefox 84.

Has Regression Range: --- → yes
Assignee: nobody → longsonr
Flags: needinfo?(longsonr)
Pushed by longsonr@gmail.com: https://hg.mozilla.org/integration/autoland/rev/434d94e939e9 Ensure we move to the next path when displaying multiple adjacent textPaths r=emilio
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 87 Branch

Since the status are different for nightly and release, what's the status for beta?
For more information, please visit auto_nag documentation.

Comment on attachment 9200233 [details]
Bug 1689799 - Ensure we move to the next path when displaying multiple adjacent textPaths

Beta/Release Uplift Approval Request

  • User impact if declined: SVG files with multiple adjacent textPath elements will be misrendered
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): This reverts part of the change from bug 1678756 so we've had this line in prior versions already.
  • String changes made/needed: none
Attachment #9200233 - Flags: approval-mozilla-beta?
Flags: in-testsuite+

Comment on attachment 9200233 [details]
Bug 1689799 - Ensure we move to the next path when displaying multiple adjacent textPaths

Approved for 86 beta 5, thanks.

Attachment #9200233 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: