Bug 1689799 - Ensure we move to the next path when displaying multiple adjacent textPaths r=emilio

reverts part of bug 1678756

Differential Revision: https://phabricator.services.mozilla.com/D103558